<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/game4">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/todo"
        android:scaleType="centerCrop"
        android:src="@drawable/shakebg" />

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:alignmentMode="alignMargins"
        android:columnCount="1"
        android:columnOrderPreserved="false"
        android:rowCount="3"
        android:rowOrderPreserved="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView">

        <Button
            android:id="@+id/bouton1"
            android:layout_width="213dp"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:backgroundTint="#B6BFF1"
            android:padding="17dp"
            android:text="@string/jouer_en_mode_solo"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <Button
            android:id="@+id/bouton2"
            android:layout_width="213dp"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:backgroundTint="@color/white"
            android:padding="17dp"
            android:text="@string/jouer_avec_un_ami"
            android:textColor="@color/black"
            android:textStyle="bold" />


        <Button
            android:id="@+id/bouton4"
            android:layout_width="213dp"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:backgroundTint="#E63131"
            android:padding="17dp"
            android:text="@string/quitter_le_jeu"
            android:textColor="@color/black"
            android:textStyle="bold" />
    </GridLayout>

</androidx.constraintlayout.widget.ConstraintLayout>