<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EBC7F4"
    android:id="@+id/game1">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/fond_game1"
        android:scaleType="centerCrop"
        android:contentDescription="@string/todo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/tir_a_la_fleche"
                android:textColor="#FFFFFF"
                android:textSize="30sp"
                android:textStyle="bold"
                android:layout_margin="10dp">

            </TextView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            tools:layout_editor_absoluteX="95dp"
            tools:layout_editor_absoluteY="39dp">

            <GridLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:alignmentMode="alignMargins"
                android:columnCount="1"
                android:columnOrderPreserved="false"
                android:rowCount="4"
                android:rowOrderPreserved="false">

                <Button
                    android:id="@+id/bouton1"
                    android:layout_width="213dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:backgroundTint="@color/black"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:padding="17dp"
                    android:text="@string/jouer_en_mode_solo" />

                <Button
                    android:id="@+id/bouton2"
                    android:layout_width="213dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:textColor="@color/black"
                    android:backgroundTint="@color/white"
                    android:textStyle="bold"
                    android:padding="17dp"
                    android:text="@string/jouer_avec_un_ami" />

                <Button
                    android:id="@+id/bouton3"
                    android:layout_width="213dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:backgroundTint="@color/black"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:padding="17dp"
                    android:text="@string/parametre" />

                <Button
                    android:id="@+id/bouton4"
                    android:layout_width="213dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:backgroundTint="@color/white"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:padding="17dp"
                    android:text="@string/quitter_le_jeu" />
            </GridLayout>
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>